# quicfs-rs

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  quicfs-rs.code-workspace  shell.nix
blog/: day1.md
examples/: cert.pem  key.pem
notes/: 1-tokio-sockets.md  2-ez-clap.md  3-quic-n-ez.md  4-thrift-no-wait-protobuf.md  4-thrifting.md  4-zero-copy.md  5-ermergherd-cerpnperter.md  6-talk-rpc-to-me.md
schema/: data.proto  quicfs.proto  quicfs.thrift  rpc.proto  server.capnp
schema/core/: errors.capnp  files.capnp  models.capnp
schema/nodes/: directory.capnp  file.capnp  node.capnp
src/: cli.rs  codec.rs  error.rs  main.rs  quic.rs  quicfs.rs  schema_helpers.rs  server.rs
src/client/: mod.rs  wrapper.rs
src/quic/: client.rs  server.rs
src/schema/: mod.rs  quicfs.data.rs  quicfs.rs  rpc.rs  rust_capnp.rs  server_capnp.rs
src/schema/core/: errors_capnp.rs  files_capnp.rs  mod.rs  models_capnp.rs
src/schema/nodes/: directory_capnp.rs  file_capnp.rs  mod.rs  node_capnp.rs
src/server/: directory.rs  file.rs  mod.rs  node.rs  server.rs
tools/: README.md  vscode-lldb.nix  vscode-lldb.sh
