[package]
name = "quicfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"]}
env_logger = "0.9.0"
url = "2.2"
tokio = { version = "1.21", features = ["full"] }
clap = { version = "3.2.20", features = ["derive"] }
quinn = { version = "0.8" }
rustls = { version = "*" ,features = ["quic"] }
rustls-pemfile = { version = "1" }
futures-util = { version = "*" }
