[package]
name = "quicfs-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"]}
env_logger = "0.9.0"
url = "2.2"
tokio = { version = "1.21", features = ["full"] }
clap = { version = "3.2.20", features = ["derive"] }
quinn = "0.8"
rustls = { version = "*" ,features = ["quic"] }
rustls-pemfile = "1"
futures-util = "*"
flatbuffers = "2"
serde = { version = "1.0" ,features = ["derive"] }
capnp = "0.14"

[build-dependencies]
capnpc = "0.14"
